# realme_c75x-AndroidV-kernel-source

./: BUILD.bazel  Kbuild  Kconfig.ext  Makefile.ext
arch/arm64/boot/dts/: oplus
arch/arm64/configs/: mgk_64_k66_defconfig
drivers/clk/mediatek/: clk-mt6877-pg.c
drivers/cpufreq/: mediatek-cpufreq-hw_main.c
drivers/dma-buf/heaps/: Kconfig  Makefile  mm_osvelte  mtk_dma_trace.h  mtk_heap_priv.h  mtk_sec_heap.c  mtk_system_heap.c
drivers/gpu/drm/: oplus
drivers/gpu/drm/panel/: Kconfig  Makefile  mtk_drm_panel_drv_dsi.c  panel-alpha-samsung-s6e3hae-fhd-dphy-cmd-120hz-r4831a.c  panel-ili7838e-dv3-alpha-cmd.c  panel-l12a-42-02-0a-dsc-cmd.c  panel-nt36672a-rt4801-vdo.c  panel-nt37707-c2v-arp.c  panel-nt37801-cmd-120hz.c  panel-nt37801-msync2-rte.c  panel-rm692h5-cmd.c  panel-samsung-op-cmd.c  panel-samsung-s68fc01-vdo-aod.c  panel-truly-ft8756-vdo.c  panel-truly-nt35595-cmd.c
drivers/gpu/mediatek/hal/: mtk_gpu_utility.c
drivers/gpu/mediatek/mt-plat/: mtk_gpu_utility.h
drivers/gpu/oplus_mali_interface/: Kconfig  Makefile  oplus_powermodel_gpu_utility.c  oplus_powermodel_gpu_utility.h
drivers/i2c/busses/: i2c-mt65xx.c
drivers/iio/adc/: mt6577_auxadc.c
drivers/input/: fingerprint
drivers/input/keyboard/: mtk-kpd.c  mtk-pmic-keys.c
drivers/input/touchscreen/GT9966/: goodix_ts_inspect.c
drivers/interconnect/mediatek/: mmqos-hrt.c
drivers/leds/: Makefile  leds-mt6360.c  leds-mtk.c  leds-mtk.h
drivers/leds/flash/: leds-mt6379.c
drivers/misc/: Kconfig  Makefile
drivers/misc/mediatek/: Kconfig  Makefile  sensors-1.0
drivers/misc/mediatek/adsp/: adsp_core.c  (+3 more)
drivers/misc/oplus/: oplus_gpio  sim_detect  vibrator
drivers/mmc/host/: mtk-mmc.c
drivers/oplus_inject/: Kconfig
drivers/phy/mediatek/: phy-mtk-mt6379-eusb2-repeater.c  phy-mtk-tphy.c  phy-mtk-xsphy.c
drivers/pinctrl/mediatek/: pinctrl-mtk-common-v2_debug.c
drivers/power/: Kconfig  Makefile
drivers/power/supply/: Kconfig  Makefile  charger_class.c  charger_class.h  mt6358-gauge.c  mt6359p-gauge.c  mt6360_pmu_chg.c  mt6370-charger.c  mt6375-charger.c  mt6379-charger.c  mt6379-charger.h  mt6379-chgdev.c  mtk-battery-manager.c  mtk_battery.c  mtk_battery.h  mtk_battery_coulomb_service.c  mtk_battery_daemon.c  mtk_battery_interface.c  mtk_battery_table.h  mtk_charger.h  mtk_chg_type_det.c  mtk_gauge.h  mtk_pd_adapter.c
drivers/regulator/: Kconfig  Makefile  mt6315-regulator.c  mt6359p-regulator.c  mt6360-regulator.c  mt6373-regulator.c  sm5109_tps65132_regulator.c
drivers/soc/mediatek/: Kconfig
drivers/soc/oplus/: locking
drivers/spi/: spi-mt65xx.c
drivers/thermal/mediatek/: soc_temp_lvts.c
drivers/ufs/: ufs-mediatek-sysfs.c  ufs-mediatek.c
drivers/usb/mtu3/: mtu3.h  mtu3_core.c  mtu3_dr.c  mtu3_gadget.c  mtu3_gadget_ep0.c  mtu3_plat.c
include/dt-bindings/gce/: mt6877-gce.h
include/dt-bindings/mfd/: mt6379.h
include/linux/: mtk_panel_ext.h
include/trace/events/: trace_sched_assist.h
include/uapi/drm/: mediatek_drm.h
kernel/configs/: ext_modules.list  mt6382.config  mt6768_32_overlay.config  mt6768_overlay.config  mt6833_overlay.config  mt6877_overlay.config  oplus6769.config  oplus6833.config  oplus6877.config  oplus6899.config  oplus6991.config
kernel/kleaf/: mgk_64.bzl  mgk_modules.bzl
sound/soc/codecs/: Kconfig  Makefile  audio  mt6358-accdet.c  mt6358-accdet.h  mt6358.c  mt6358.h  mt6359.c  mt6359p-accdet.c  mt6359p-accdet.h  mt6359p.h  mt6681-accdet.c  mt6681-accdet.h  mt6681-private.h  mt6681.c
(+851 files in other folders)
